# B-RISE

./: .gitignore  README.md  pyproject.toml
notebooks/: B_RISE_code.ipynb  MNSIT.ipynb  RESNET.ipynb  evaluation.ipynb  main.ipynb  test.ipynb
src/BRISE.egg-info/: PKG-INFO  SOURCES.txt
src/brise/: brise.py  evaluation.py  rise.py  utils.py
src/methods/: exact_banzhaf.py  rise.py
src/rise/: B_RISE.py  exact_banzhaf.py  rise.py  rise_banzhaf.py  utils.py
src/rise_banzhaf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: utils.py
