[project]
name = "BRISE"
version = "0.1.0"
description = "Banzhaf-based contrastive RISE explanations"
requires-python = ">=3.12"

dependencies = [
    "jupyterlab",
    "ipykernel",
    "numpy",
    "torch",
    "torchvision",
    "tqdm",
    "matplotlib",
    "scipy",
]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]