[project]
name = "BRISE"
version = "0.1.0"
description = "Banzhaf-based RISE explanations"
requires-python = ">=3.12"

dependencies = [
    "jupyterlab",
    "ipykernel",
    "numpy",
    "torch",
    "torchvision",
    "tqdm",
    "matplotlib",
    "scipy",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
packages = ["brise"]

# Tell uv to install PyTorch from CUDA 13 index
[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"